--- a/config/locales/devise.zh-TW.yml
+++ b/config/locales/devise.zh-TW.yml
@@ -1,11 +1,12 @@
 # Additional translations at https://github.com/plataformatec/devise/wiki/I18n
 
-zh_tw:
+zh-TW:
   errors:
     messages:
-      expired: "已經過期，請重新申請一個"
+      expired: "已經過期，請重新申請。"
       not_found: "找不到"
       already_confirmed: "已經驗證，請直接登入"
+      confirmation_period_expired: "必須在 %{period} 內驗證，請重新申請。"
       not_locked: "被鎖定了"
       not_saved:
         one: "有一個錯誤導致%{resource}不能被儲存："
@@ -20,10 +21,16 @@ zh_tw:
       invalid_token: '無效的認證代碼。'
       timeout: '您的登入時效過期，請重新登入，才能繼續。'
       inactive: '您的帳號尚未被啟用。'
+      last_attempt: "您還有最後一次嘗試機會，再次失敗您的帳號將會被鎖定。"
+      not_found_in_database: "信箱或密碼是無效的。"
     sessions:
       signed_in: '成功登入了。'
       signed_out: '成功登出了。'
+      user:
+        already_signed_out: "已經登出了。"
+        recaptcha_error: "驗證碼輸入錯誤。"
     passwords:
+      no_token: "這是密碼重設頁面，僅能透過密碼重設信件進入。如果您是透過重設信件進入的，請確認您的網址是完整的。"
       send_instructions: '您將在幾分鐘後收到一封電子郵件，內有重新設定密碼的步驟說明。'
       updated: '您的密碼已被修改，而您現在已重新登入。'
       updated_not_active: '您的密碼已被修改。'
@@ -46,7 +53,7 @@ zh_tw:
       send_paranoid_instructions: '如果您的帳號已存在，您的電子信箱將會收到如何解鎖帳號的指示。'
     omniauth_callbacks:
       success: '成功從 %{kind} 取得認證'
-      failure: '從 %{kind} 無法取得認證，因為 "%{reason}".'
+      failure: '從 %{kind} 無法取得認證，因為 "%{reason}"。'
     mailer:
       confirmation_instructions:
         subject: "【國會調查兵團】帳號驗證步驟"
